--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -140,17 +140,13 @@
                           </div>
                           <div class="card-footer row justify-content-between mx-0">
                             <div class="pages">
-                              <div class="input-group mb-3">
-                                <select class="custom-select rounded" id="inputGroupSelect02">
-                                  <option selected>10</option>
-                                  <option>20</option>
-                                </select>
-                                <div class="input-group-append">
-                                  <label class="input-group-text bg-white border-0 bg-transparent"
-                                    for="inputGroupSelect02">Showing 1-10 of
-                                    100</label>
-                                </div>
-                              </div>
+                              <mat-form-field appearance="outline" class="mr-2">
+                                <mat-select>
+                                  <mat-option value="10">10</mat-option>
+                                  <mat-option value="10">20</mat-option>
+                                </mat-select>
+                              </mat-form-field>
+                              <span>Showing 1-10 of 100 </span>
                             </div>
                             <ul class="pagination">
                               <li class="page-item disabled">
@@ -517,17 +513,13 @@
                     </div>
                     <div class="card-footer row justify-content-between mx-0">
                       <div class="pages">
-                        <div class="input-group mb-3">
-                          <select class="custom-select rounded" id="inputGroupSelect02">
-                            <option selected>10</option>
-                            <option>20</option>
-                          </select>
-                          <div class="input-group-append">
-                            <label class="input-group-text bg-transparent border-0 text-hi-dark-grey"
-                              for="inputGroupSelect02">Showing 1-10 of
-                              100</label>
-                          </div>
-                        </div>
+                        <mat-form-field appearance="outline" class="mr-2">
+                          <mat-select>
+                            <mat-option value="10">10</mat-option>
+                            <mat-option value="10">20</mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                        <span>Showing 1-10 of 100 </span>
                       </div>
                       <ul class="pagination">
                         <li class="page-item disabled">
