--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -30,7 +30,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="custom-file-select" appDnd (fileDropped)="onFileDropped($event)">
+        <div class="custom-file-select" appDnd><!-- (fileDropped)="onFileDropped($event)" -->
           <input type="file" id="uploadFileInput" multiple (change)="fileBrowseHandler($event)">
           <div class="text-center my-5">
             <h2><i class="fa fa-upload"></i></h2>
@@ -46,7 +46,7 @@
                 {{ file?.name }}
               </h6>
               <p class="size mb-0">
-                {{ formatBytes(file?.size) }}
+                {{ getSize(file?.size) }}
               </p>
               <app-file-progess [progress]="file?.progress"></app-file-progess>
             </div>
@@ -101,30 +101,13 @@
             <mat-option value="cust-icon">Choose a Custom Icon</mat-option>
           </mat-select>
         </mat-form-field>
-        <div class="custom-file-select" appDnd (fileDropped)="onFileDropped($event)" *ngIf="showCustomIcon">
-          <input type="file" id="uploadFileInput" multiple (change)="fileBrowseHandler($event)"
-            accept="image/x-png,image/gif,image/jpeg">
+        <div class="custom-file-select" appDnd [style.display]="custIconAddURL">
+          <input type="file" id="uploadFileInput" multiple (change)="fileBrowseHandler($event ,true)">
           <div class="text-center my-5">
             <h2><i class="fa fa-upload"></i></h2>
             <h5>Drag & Drop file here</h5>
             OR
             <div class="btn btn-primary d-block w-25 mx-auto mt-3">Browse</div>
-          </div>
-        </div>
-        <div class="files-list">
-          <div class="single-file mt-3 row mx-0 p-2" *ngFor="let file of files; let i = index">
-            <div class="info mx-auto">
-              <h6 class="name mb-0 text-wrap">
-                {{ file?.name }}
-              </h6>
-              <p class="size mb-0">
-                {{ formatBytes(file?.size) }}
-              </p>
-              <app-file-progess [progress]="file?.progress"></app-file-progess>
-            </div>
-            <div>
-              <i class="fas fa-trash curs-ptr" (click)="deleteFile(i)"></i>
-            </div>
           </div>
         </div>
         <img [src]="iconUrl" class="border mt-2 mb-4" style="height: 130px; width: auto;">
