--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -101,7 +101,8 @@
             <mat-option value="cust-icon">Choose a Custom Icon</mat-option>
           </mat-select>
         </mat-form-field>
-        <div class="custom-file-select" appFileDnd *ngIf="addURLIcon=='cust-icon'" (fileDropped)="onFileDropped($event,true)">
+        <div class="custom-file-select" appFileDnd *ngIf="addURLIcon=='cust-icon'"
+          (fileDropped)="onFileDropped($event,true)">
           <input type="file" id="uploadFileInput" (change)="fileBrowseHandler($event ,true)" accept="image/*">
           <div class="text-center my-5">
             <h2><i class="fa fa-upload"></i></h2>
@@ -110,7 +111,24 @@
             <div class="btn btn-primary d-block w-25 mx-auto mt-3">Browse</div>
           </div>
         </div>
-        <img [src]="iconUrl && addURLIcon=='cust-icon'?iconUrl:defIcon" class="border mt-2 mb-4" style="height: 130px; width: auto;">
+        <div class="files-list">
+          <div class="single-file mt-3 row mx-0 p-2" *ngFor="let file of files; let i = index">
+            <div class="info mx-auto">
+              <h6 class="name mb-0 text-wrap">
+                {{ file?.name }}
+              </h6>
+              <p class="size mb-0">
+                {{ getSize(file?.size) }}
+              </p>
+              <app-file-progess [progress]="file?.progress"></app-file-progess>
+            </div>
+            <div>
+              <i class="fas fa-trash curs-ptr" (click)="deleteFile(i)"></i>
+            </div>
+          </div>
+        </div>
+        <img [src]="iconUrl && addURLIcon=='cust-icon'?iconUrl:defIcon" class="border mt-2 mb-4"
+          style="height: 130px; width: auto;">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Name</mat-label>
           <input matInput placeholder="Add a Name">
@@ -137,6 +155,272 @@
           <mat-checkbox>View in Showpad <i class="fa fa-info-circle"
               matTooltip="This permission only works for https links"></i></mat-checkbox><br />
           <mat-checkbox>Hide name in Workspace</mat-checkbox>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Add Folder Modal -->
+<div class="modal fade" id="addFolderModal" tabindex="-1" role="dialog" aria-labelledby="addFolderModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addFolderModalLabel">Add Folder</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="custom-file-select" appFileDnd (fileDropped)="onFileDropped($event,true)">
+          <input type="file" id="uploadFileInput" (change)="fileBrowseHandler($event ,true)" accept="image/*">
+          <div class="text-center my-5">
+            <h2><i class="fa fa-upload"></i></h2>
+            <h5>Drag & Drop an icon image here</h5>
+            OR
+            <div class="btn btn-primary d-block w-25 mx-auto mt-3">Browse</div>
+          </div>
+        </div>
+        <div class="files-list">
+          <div class="single-file mt-3 row mx-0 p-2" *ngFor="let file of files; let i = index">
+            <div class="info mx-auto">
+              <h6 class="name mb-0 text-wrap">
+                {{ file?.name }}
+              </h6>
+              <p class="size mb-0">
+                {{ getSize(file?.size) }}
+              </p>
+              <app-file-progess [progress]="file?.progress"></app-file-progess>
+            </div>
+            <div>
+              <i class="fas fa-trash curs-ptr" (click)="deleteFile(i)"></i>
+            </div>
+          </div>
+        </div>
+        <img [src]="iconUrl && addURLIcon=='cust-icon'?iconUrl:defIcon" class="border mt-2 mb-4"
+          style="height: 130px; width: auto;">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Folder Label</mat-label>
+          <input matInput placeholder="Folder Label">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Description</mat-label>
+          <textarea matInput placeholder="Description"></textarea>
+        </mat-form-field>
+        <div class="options">
+          Options
+          <mat-checkbox class="d-block">Hide label in Experience</mat-checkbox>
+          <mat-checkbox class="d-block">Hide in Kiosk Mode</mat-checkbox>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Add Smart Folder Modal -->
+<div class="modal fade" id="addSmartFolderModal" tabindex="-1" role="dialog" aria-labelledby="addSmartFolderModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addSmartFolderModalLabel">Add Smart Folder</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="custom-file-select" appFileDnd (fileDropped)="onFileDropped($event,true)">
+          <input type="file" id="uploadFileInput" (change)="fileBrowseHandler($event ,true)" accept="image/*">
+          <div class="text-center my-5">
+            <h2><i class="fa fa-upload"></i></h2>
+            <h5>Drag & Drop an icon image here</h5>
+            OR
+            <div class="btn btn-primary d-block w-25 mx-auto mt-3">Browse</div>
+          </div>
+        </div>
+        <div class="files-list">
+          <div class="single-file mt-3 row mx-0 p-2" *ngFor="let file of files; let i = index">
+            <div class="info mx-auto">
+              <h6 class="name mb-0 text-wrap">
+                {{ file?.name }}
+              </h6>
+              <p class="size mb-0">
+                {{ getSize(file?.size) }}
+              </p>
+              <app-file-progess [progress]="file?.progress"></app-file-progess>
+            </div>
+            <div>
+              <i class="fas fa-trash curs-ptr" (click)="deleteFile(i)"></i>
+            </div>
+          </div>
+        </div>
+        <img [src]="iconUrl && addURLIcon=='cust-icon'?iconUrl:defIcon" class="border mt-2 mb-4"
+          style="height: 130px; width: auto;">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Smart Folder Label</mat-label>
+          <input matInput placeholder="Smart Folder Label">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Description</mat-label>
+          <textarea matInput placeholder="Description"></textarea>
+        </mat-form-field>
+        <div class="options">
+          Options
+          <mat-checkbox class="d-block">Hide label in Experience</mat-checkbox>
+          <mat-checkbox class="d-block">Hide in Kiosk Mode</mat-checkbox>
+        </div>
+        <hr>
+        <div class="w-100 dark-bg-hover p-2 rounded mb-2" (click)="showSmartFolderSection()">
+          Smart Folder Settings
+          <div class="float-right">
+            <ng-container *ngIf="dispSmartFolderSection; else elseIcon">
+              <i class="fa fa-angle-up"></i>
+            </ng-container>
+            <ng-template #elseIcon>
+              <i class="fa fa-angle-down"></i>
+            </ng-template>
+          </div>
+        </div>
+        <div *ngIf="dispSmartFolderSection">
+          <div class="card">
+            <div class="card-header row">
+              <div class="dropdown mr-2">
+                <button class="btn btn-light dropdown-toggle" type="button" id="fileTypeDD" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  File Type
+                </button>
+                <div class="dropdown-menu" aria-labelledby="fileTypeDD">
+                  <mat-checkbox class="dropdown-item">Audio</mat-checkbox>
+                  <mat-checkbox class="dropdown-item">Document</mat-checkbox>
+                  <mat-checkbox class="dropdown-item">HTML Content</mat-checkbox>
+                  <mat-checkbox class="dropdown-item">Photo</mat-checkbox>
+                  <mat-checkbox class="dropdown-item">URL</mat-checkbox>
+                  <mat-checkbox class="dropdown-item">Video</mat-checkbox>
+                </div>
+              </div>
+              <div class="dropdown mr-2">
+                <button class="btn btn-light dropdown-toggle" type="button" id="propertyDD" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  Property
+                </button>
+                <div class="dropdown-menu" aria-labelledby="propertyDD">
+                  <mat-checkbox class="dropdown-item">Can't be annotated</mat-checkbox>
+                  <mat-checkbox class="dropdown-item">Can't be annotated</mat-checkbox>
+                  <mat-checkbox class="dropdown-item">Can't be annotated</mat-checkbox>
+                </div>
+              </div>
+              <div class="dropdown mr-2">
+                <button class="btn btn-light dropdown-toggle" type="button" id="propertyDD" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  Tags
+                </button>
+                <div class="dropdown-menu" aria-labelledby="propertyDD" style="width:18rem;">
+                  <mat-form-field appearance="outline" class="dropdown-item" class="bg-white w-100 px-3">
+                    <mat-label>Match ALL of theese tags</mat-label>
+                    <input matInput placeholder="Match ALL of theese tags">
+                  </mat-form-field>
+                  <mat-form-field appearance="outline" class="dropdown-item" class="bg-white w-100 px-3">
+                    <mat-label>Match ANY of theese tags</mat-label>
+                    <input matInput placeholder="Match ANY of theese tags">
+                  </mat-form-field>
+                  <mat-form-field appearance="outline" class="dropdown-item" class="bg-white w-100 px-3">
+                    <mat-label>Match NONE of theese tags</mat-label>
+                    <input matInput placeholder="Match NONE of theese tags">
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="dropdown mr-2">
+                <button class="btn btn-light dropdown-toggle" type="button" id="propertyDD" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  Locale
+                </button>
+                <div class="dropdown-menu" aria-labelledby="propertyDD" style="width:18rem;">
+                  <mat-form-field appearance="outline" class="dropdown-item" class="bg-white w-100 px-3">
+                    <mat-label>Match ALL of these languages</mat-label>
+                    <input matInput placeholder="Match ALL of these languages" class="bg-white">
+                  </mat-form-field>
+                  <mat-form-field appearance="outline" class="dropdown-item" class="bg-white w-100 px-3">
+                    <mat-label>Match ANY of these languages</mat-label>
+                    <input matInput placeholder="Match ANY of these languages">
+                  </mat-form-field>
+                  <mat-form-field appearance="outline" class="dropdown-item" class="bg-white w-100 px-3">
+                    <mat-label>Match NONE of theese languages</mat-label>
+                    <input matInput placeholder="Match NONE of theese languages">
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="dropdown">
+                <button class="btn btn-light dropdown-toggle" type="button" id="authorDD" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  Author
+                </button>
+                <div class="dropdown-menu" aria-labelledby="authorDD" style="width:18rem;">
+                  <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 px-3" [floatLabel]="'never'">
+                    <i matPrefix class="fas fa-search"></i>
+                    <input matInput placeholder="Search ...">
+                  </mat-form-field>
+                  <div class="dropdown-divider"></div>
+                  <div class="row justify-content-around m-0">
+                    <button class="btn btn-light text-primary">Select all</button>
+                    <button class="btn btn-light">Clear all</button>
+                  </div>
+                  <div class="dropdown-divider"></div>
+                  <div style="max-height: 200px; overflow-y: auto;">
+                    <mat-checkbox class="dropdown-item">ABC (you)</mat-checkbox>
+                    <mat-checkbox class="dropdown-item">def</mat-checkbox>
+                    <mat-checkbox class="dropdown-item">def</mat-checkbox>
+                    <mat-checkbox class="dropdown-item">def</mat-checkbox>
+                    <mat-checkbox class="dropdown-item">def</mat-checkbox>
+                    <mat-checkbox class="dropdown-item">def</mat-checkbox>
+                    <mat-checkbox class="dropdown-item">def</mat-checkbox>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card-body row">
+              <div class="col-4">
+                Select the criteria for this smart folder, or:
+              </div>
+              <div class="col-8">
+                <mat-form-field appearance="outline" class="w-100">
+                  <mat-label>Search saved filter</mat-label>
+                  <mat-select>
+                    <mat-option value=""></mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </div>
+          </div>
+          <div class="row justify-content-between mx-0 mt-3 align-self-center">
+            <mat-form-field appearance="outline">
+              <mat-label>Sort files on</mat-label>
+              <mat-select>
+                <mat-option value="name">Name</mat-option>
+                <mat-option value="file-size">File Size</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-radio-group aria-label="Select an option" class="align-self-center">
+              <mat-radio-button value="asc" class="mr-3">
+                <i class="fa fa-arrow-up"></i>
+              </mat-radio-button>
+              <mat-radio-button value="dsc">
+                <i class="fa fa-arrow-down"></i>
+              </mat-radio-button>
+            </mat-radio-group>
+            <mat-form-field appearance="outline">
+              <mat-label>List number of files to</mat-label>
+              <input type="number" matInput placeholder="List number of files to">
+            </mat-form-field>
+          </div>
         </div>
       </div>
       <div class="modal-footer">
