--- a/src/app/commn/commn.component.html
+++ b/src/app/commn/commn.component.html
@@ -237,7 +237,59 @@
 </div>
 
 <!-- new announcment Modal -->
-<ng-template #anncModal class="custom-modal" let-modal>
+<ng-template #anncModal let-modal class="custom-modal">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">New Announcement</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Subject</mat-label>
+      <input matInput placeholder="Subject">
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Announcement</mat-label>
+      <textarea matInput placeholder="Announcement"></textarea>
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="outline">
+      <mat-label>Send To</mat-label>
+      <mat-select>
+        <mat-option>All Users</mat-option>
+        <mat-option>Selected Experiences</mat-option>
+        <mat-option>Selected User Groups</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <br />
+    <mat-checkbox>Request user to update content</mat-checkbox><br />
+    <mat-checkbox>Notify User by Email</mat-checkbox><br />
+    <mat-checkbox>Send Later</mat-checkbox><br />
+    <div class="row justify-content-between m-0">
+      <mat-form-field appearance="outline">
+        <mat-label>Choose a date</mat-label>
+        <input matInput [matDatepicker]="picker">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Time</mat-label>
+        <mat-select>
+          <mat-option>00:00</mat-option>
+          <mat-option>01:00</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cross click')">Close</button>
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- <ng-template #anncModal class="custom-modal" let-modal>
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -291,4 +343,4 @@
       </div>
     </div>
   </div>
-</ng-template>
+</ng-template> -->
