--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -10,8 +10,7 @@
           <div class="users-section">
             <div class="buttons-row row mt-3 justify-content-between mx-2">
               <div class="dropdown">
-                <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="addCOntentDD"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="addCOntentDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Add
                 </button>
                 <div class="dropdown-menu" aria-labelledby="addCOntentDD">
@@ -33,8 +32,7 @@
                           <h5 class="card-title px-3">
                             <div class="row heading">
                               <div class="search col-lg-8 col-sm-7">
-                                <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2"
-                                  [floatLabel]="'never'">
+                                <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2" [floatLabel]="'never'">
                                   <i matPrefix class="fas fa-search"></i>
                                   <input matInput placeholder="Search ...">
                                   <div matSuffix class="curs-ptr">
@@ -45,8 +43,7 @@
                               <div class="col-lg-4 col-sm-5 align-self-center">
                                 <div class="float-left">
                                   <!-- Button trigger for send invitations modal -->
-                                  <button type="button" class="btn btn-light" data-toggle="modal"
-                                    data-target="#sendInvModal">
+                                  <button type="button" class="btn btn-light" data-toggle="modal" data-target="#sendInvModal">
                                     Send Invitations
                                   </button>
                                 </div>
@@ -58,45 +55,36 @@
                                     <div class="cog dropdown-menu dropdown-menu-right" #cogDropDown>
                                       <div class="scrollable">
                                         <span class="ml-2 heading">Visible Columns</span>
-                                        <ul cdkDropList id="cdk-vis-items" #visbList="cdkDropList"
-                                          [cdkDropListData]="visbCols" class="min-ht pl-0 mt-2"
-                                          [cdkDropListConnectedTo]="[hidList]" (cdkDropListDropped)="drop($event)">
-                                          <button class="dropdown-item pl-2" *ngFor="let col of visbCols;let i=index"
-                                            cdkDrag>
+                                        <ul cdkDropList id="cdk-vis-items" #visbList="cdkDropList" [cdkDropListData]="visbCols" class="min-ht pl-0 mt-2" [cdkDropListConnectedTo]="[hidList]" (cdkDropListDropped)="drop($event)">
+                                          <button class="dropdown-item pl-2" *ngFor="let col of visbCols;let i=index" cdkDrag>
                                             <span class="ellipsis mr-2">
                                               <i class="fa fa-ellipsis-v"></i>
                                               <i class="fa fa-ellipsis-v"></i>
                                             </span>
-                                            <i class="text-primary fas fa-eye mr-2"
-                                              (click)="showHideCols(col,'hide',i)"></i>{{col.n}}
+                                            <i class="text-primary fas fa-eye mr-2" (click)="showHideCols(col,'hide',i)"></i>{{col.n}}
                                           </button>
-                                          <span *ngIf="visbCols.length==0" class="ml-4 text-secondary">No
-                                            visbible
-                                            columns</span>
+                                          <span *ngIf="visbCols.length==0" class="ml-4 text-secondary">
+                                            No visbible columns
+                                          </span>
                                         </ul>
                                         <span class="ml-2 heading">Hidden Columns</span>
-                                        <ul cdkDropList id="cdk-hid-items" #hidList="cdkDropList"
-                                          [cdkDropListData]="hidCols" class="min-ht pl-0 mt-2 mb-0"
-                                          [cdkDropListConnectedTo]="[visbList]" (cdkDropListDropped)="drop($event)">
-                                          <button class="dropdown-item pl-2" *ngFor="let col of hidCols;let i=index"
-                                            cdkDrag>
+                                        <ul cdkDropList id="cdk-hid-items" #hidList="cdkDropList" [cdkDropListData]="hidCols" class="min-ht pl-0 mt-2 mb-0" [cdkDropListConnectedTo]="[visbList]" (cdkDropListDropped)="drop($event)">
+                                          <button class="dropdown-item pl-2" *ngFor="let col of hidCols;let i=index" cdkDrag>
                                             <span class="ellipsis mr-2 mb-1">
                                               <i class="fa fa-ellipsis-v"></i>
                                               <i class="fa fa-ellipsis-v"></i>
                                             </span>
-                                            <i class="fas fa-eye-slash mr-2"
-                                              (click)="showHideCols(col,'show',i)"></i>{{col.n}}
+                                            <i class="fas fa-eye-slash mr-2" (click)="showHideCols(col,'show',i)"></i>{{col.n}}
                                           </button>
-                                          <span *ngIf="hidCols.length==0" class="ml-4 text-secondary">No
-                                            hidden
-                                            columns</span>
+                                          <span *ngIf="hidCols.length==0" class="ml-4 text-secondary">
+                                            No hidden columns
+                                          </span>
                                         </ul>
                                       </div>
                                       <hr class="mb-2">
                                       <div class="float-right mr-2">
-                                        <button class="btn btn-secondary btn-sm mr-2"
-                                          (click)=closeDropdown($event)>Cancel</button>
-                                        <button class="btn btn-primary btn-sm">Save</button>
+                                        <button class="btn btn-secondary btn-sm mr-2" (click)=closeDropdown($event)>Cancel</button>
+                                        <button class="btn btn-primary btn-sm" (click)=saveHdrChngs($event);>Save</button>
                                       </div>
                                     </div>
                                   </div>
@@ -108,24 +96,19 @@
                             <table class="table table-hover text-dark w-100" [ngClass]="{'hide-rows': showDoc}">
                               <thead>
                                 <tr>
-                                  <ng-container *ngFor="let col of cols">
-                                    <th *ngIf="col.visb" class="curs-ptr">
-                                      {{col.n}}<i class="fas ml-1"
-                                        [ngClass]="{'fa-sort-down align-top': col.dir==1, 'fa-sort-up align-bottom': col.dir==0}"></i>
-                                    </th>
-                                  </ng-container>
+                                  <th class="curs-ptr" *ngFor="let col of cols">
+                                    {{col.n}}<i class="fas ml-1" [ngClass]="{'fa-sort-down align-top': col.dir==1, 'fa-sort-up align-bottom': col.dir==0}"></i>
+                                  </th>
                                 </tr>
                               </thead>
                               <tbody>
                                 <tr *ngFor="let d of data" (click)="toggleDoc()">
-                                  <ng-container *ngFor="let col of cols">
-                                    <td *ngIf="col.visb">
-                                      <span *ngIf="col.key=='name' else otherRow">
-                                        {{d.name}}<small>{{d.email}}</small>
-                                      </span>
-                                      <ng-template #otherRow>{{d[col.key]}}</ng-template>
-                                    </td>
-                                  </ng-container>
+                                  <td *ngFor="let col of cols">
+                                    <span *ngIf="col.key=='name' else otherRow">
+                                      {{d.name}}<small>{{d.email}}</small>
+                                    </span>
+                                    <ng-template #otherRow>{{d[col.key]}}</ng-template>
+                                  </td>
                                   <!-- <td>
                                     User Full Name<br />
                                     <small>email@email.com</small>
@@ -150,15 +133,13 @@
                             </div>
                             <ul class="pagination">
                               <li class="page-item disabled">
-                                <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1"
-                                  aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
+                                <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
                               </li>
                               <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a></li>
                               <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">2</a></li>
                               <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">3</a></li>
                               <li class="page-item">
-                                <a class="page-link bg-hi-grey" href="javascript:void(0)"><i
-                                    class="fas fa-chevron-right"></i></a>
+                                <a class="page-link bg-hi-grey" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
                               </li>
                             </ul>
                           </div>
@@ -352,8 +333,7 @@
                     <h5 class="card-title px-3">
                       <div class="row heading">
                         <div class="search col-md-6">
-                          <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2"
-                            [floatLabel]="'never'">
+                          <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2" [floatLabel]="'never'">
                             <i matPrefix class="fas fa-search"></i>
                             <input matInput placeholder="Search ...">
                             <div matSuffix class="curs-ptr">
@@ -405,8 +385,7 @@
                             <button class="btn btn-light dropdown-toggle" (click)="toggleDropdown($event)">
                               Division
                             </button>
-                            <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #divisionDropDown
-                              aria-labelledby="divisionTrigger">
+                            <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #divisionDropDown aria-labelledby="divisionTrigger">
                               <div class="input-group mb-2 p-2">
                                 <div class="input-group-prepend">
                                   <span class="input-group-text bg-white">
@@ -443,8 +422,7 @@
                             <button class="btn btn-light dropdown-toggle" (click)="toggleDropdown($event)">
                               Experience
                             </button>
-                            <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #expDropDown
-                              aria-labelledby="divisionTrigger">
+                            <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #expDropDown aria-labelledby="divisionTrigger">
                               <div class="input-group mb-2 p-2">
                                 <div class="input-group-prepend">
                                   <span class="input-group-text bg-white">
@@ -486,11 +464,9 @@
                           <tr>
                             <th scope="col" class="curs-ptr">NAME<i class="fas fa-sort-down ml-1 align-top"></i>
                             </th>
-                            <th scope="col" class="curs-ptr">Latest Activity<i
-                                class="fas fa-sort-down ml-1 align-top"></i>
+                            <th scope="col" class="curs-ptr">Latest Activity<i class="fas fa-sort-down ml-1 align-top"></i>
                             </th>
-                            <th scope="col" class="curs-ptr">Content Updated<i
-                                class="fas fa-sort-down ml-1 align-top"></i></th>
+                            <th scope="col" class="curs-ptr">Content Updated<i class="fas fa-sort-down ml-1 align-top"></i></th>
                             <th scope="col" class="curs-ptr">Role<i class="fas fa-sort-down ml-1 align-top"></i>
                             </th>
                             <th scope="col" class="curs-ptr">Date Created<i class="fas fa-sort-down ml-1 align-top"></i>
@@ -523,16 +499,14 @@
                       </div>
                       <ul class="pagination">
                         <li class="page-item disabled">
-                          <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1"
-                            aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
+                          <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
                         </li>
                         <li class="page-item active"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a>
                         </li>
                         <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">2</a></li>
                         <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">3</a></li>
                         <li class="page-item">
-                          <a class="page-link bg-hi-grey" href="javascript:void(0)"><i
-                              class="fas fa-chevron-right"></i></a>
+                          <a class="page-link bg-hi-grey" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
                         </li>
                       </ul>
                     </div>
@@ -690,8 +664,7 @@
 </div>
 
 <!-- Create New Group Modal -->
-<div class="modal fade" id="createNewGroupModal" tabindex="-1" aria-labelledby="createNewGroupModalLabel"
-  aria-hidden="true">
+<div class="modal fade" id="createNewGroupModal" tabindex="-1" aria-labelledby="createNewGroupModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
