import module with routing and navig added,merge

--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -8,7 +8,7 @@
       <div class="dropdown-menu" aria-labelledby="addCOntentDD">
         <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-user-plus mr-1"></i>Create New
           User</a>
-        <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-file-import mr-1"></i>Import CSV
+        <a class="dropdown-item" [routerLink]="'/user/import'"><i class="fas fa-file-import mr-1"></i>Import CSV
           File</a>
       </div>
     </div>
