login api integrate, set token info and user data, set header data, add url in app settings, hub url changes, navigation after login with redirect, add login guard and login check guard, show router active in sub division hub, loader gif ht wid in login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header *ngIf="isToken && !isAuthPage() && isVisb"></app-header>
+<app-header *ngIf="isToken && !isAuthPage() && isVisb" [userInfo]="usrInfo" ></app-header>
 <div class="content" *ngIf="isVisb">
   <app-sidebar *ngIf="isToken && !isAuthPage()"></app-sidebar>
   <router-outlet></router-outlet>
