--- a/src/app/home-layout/sidebar/sidebar.component.html
+++ b/src/app/home-layout/sidebar/sidebar.component.html
@@ -11,9 +11,9 @@
         <div class="link-text align-middle">Hub</div>
       </a>
       <div class="dropdown-menu ml-0" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item text-hi-dark" href="javascript:void(0)" [routerLink]="'/hub'">H.E.S. Sales Limited</a>
-        <a class="dropdown-item text-hi-dark" href="javascript:void(0)" [routerLink]="'/hub'">Hi-Force</a>
-        <a class="dropdown-item text-hi-dark" href="javascript:void(0)" [routerLink]="'/hub'">Protec SRL</a>
+        <a class="dropdown-item text-hi-dark" href="javascript:void(0)" [routerLinkActive]="['active']" [routerLink]="'/hub/1/list'">H.E.S. Sales Limited</a>
+        <a class="dropdown-item text-hi-dark" href="javascript:void(0)" [routerLinkActive]="['active']" [routerLink]="'/hub/2/list'">Hi-Force</a>
+        <a class="dropdown-item text-hi-dark" href="javascript:void(0)" [routerLinkActive]="['active']" [routerLink]="'/hub/3/list'">Protec SRL</a>
       </div>
     </div>
     <a class="nav-item p-2 text-hi-dark pl-3" [routerLinkActive]="['active']" [routerLink]="'/user'">
