--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -214,7 +214,7 @@
         <div>
           <mat-label>Password</mat-label>
           <mat-radio-group class="d-block ml-3" aria-label="Select an option">
-            <mat-radio-button [checked]="true" value="user">Let user choode password upon account confirmation
+            <mat-radio-button [checked]="true" value="user">Let user choose password upon account confirmation
             </mat-radio-button>
             <mat-radio-button value="me">Specify password</mat-radio-button>
             <mat-form-field class="d-block w-50 mx-auto" appearance="outline">
