--- a/src/app/home-layout/header/header.component.html
+++ b/src/app/home-layout/header/header.component.html
@@ -50,15 +50,15 @@
         <li class="nav-item align-self-center dropdown ml-4 user">
           <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="userDropdown" role="button"
             data-toggle="dropdown" aria-expanded="false">
-            <img src="assets/images/avatar.png"><span class="align-middle"> Art
-              Template</span>
+            <img src="assets/images/avatar.png"><span class="align-middle">
+              {{userInfo && userInfo.fN?userInfo.fN:'User'}}</span>
           </a>
           <div class="dropdown-menu large-dropdown dropdown-menu-right" aria-labelledby="userDropdown">
             <h6 class="dropdown-item row m-0 p-2 mt-2 no-bg-hover text-dark">
               <div class="col-3"><img src="assets/images/avatar.png" class="w-100"></div>
               <div class="col-9 align-self-center row">
                 <div>
-                  <div class="username">ArtTemplate</div>
+                  <div class="username">{{userInfo && userInfo.fN?userInfo.fN:'User'}}</div>
                   <div class="position text-hi-grey"><small>Manager</small></div>
                 </div>
                 <div class="ml-auto align-self-center">
@@ -74,7 +74,7 @@
             <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-cog mr-2"></i>Settings</a>
             <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-lock mr-2"></i>Lock Screen</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-sign-out-alt mr-2"></i>Logout</a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="logout();"><i class="fas fa-sign-out-alt mr-2"></i>Logout</a>
           </div>
         </li>
       </ul>
