--- a/HiForceAdminUI-dev/assets/scss/customizingMaterial.scss
+++ b/HiForceAdminUI-dev/assets/scss/customizingMaterial.scss
@@ -2,7 +2,7 @@
 @include mat-core();
 
 $my-app-primary: mat-palette($mat-grey, 800);
-$my-app-accent: mat-palette($mat-pink, 500, 900, A100);
+$my-app-accent: mat-palette($mat-red, A700);
 $my-app-warn: mat-palette($mat-deep-orange);
 $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 
